--- a/style.css
+++ b/style.css
@@ -480,3 +480,24 @@ p.date::before {
   content: "Date: ";
   color: #942c20;
 }
+.menu-buttons {
+  margin: 20px;
+  display: flex;
+  gap: 15px;
+  justify-content: center;
+}
+
+.menu-buttons button {
+  padding: 10px 20px;
+  font-size: 16px;
+  background-color: #815d5d;
+  color: white;
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.menu-buttons button:hover {
+  background-color: #a97d7d;
+}
